make response page

--- a/questions/templates/layout.html
+++ b/questions/templates/layout.html
@@ -2,47 +2,31 @@
 <html>
 <head>
     <title>quiz php</title>
-    <style type="text/css">
-        ul li {
-            list-style-type: none;
-        }
-        .top-menu {
-            clear: both;
-            margin-bottom: 20px;
-            overflow: hidden;
-            height: 30px;
-        }
-        .top-menu li {
-            padding-top: 3px;
-            list-style-type: none;
-            float: left;
-        }
-        .top-menu li a {
-            border: 1px solid lightseagreen;
-            color: lightseagreen;
-            text-decoration: none;
-            padding: 3px 10px;
-            margin: 0 10px 0 0;
-        }
-        .top-menu li a:hover {
-            color: lightcoral;
-            border: 1px solid lightcoral;
-        }
-    </style>
+{% load staticfiles %}
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static "css/doc.css" %}" rel="stylesheet">
+    <link href="{% static "css/style.css" %}" rel="stylesheet">
+    <link href="{% static "css/custom.css" %}" rel="stylesheet">
+
 </head>
 <body>
 
-<ul class="top-menu">
-    <li><a href="{% url 'homepage' %}">Homepage</a></li>
-    <li><a href="{% url 'startquiz' %}">Start quiz</a></li>
-    <li><a href="">Register</a></li>
-    <li><a href="">Login</a></li>
-</ul>
+<div class="blog-masthead">
+  <div class="container">
+    <nav class="blog-nav">
+      <a class="blog-nav-item active" href="{% url 'homepage' %}">Homepage</a>
+      <a class="blog-nav-item" href="{% url 'startquiz' %}">Start quiz</a>
+    </nav>
+  </div>
+</div>
 
-{% block body %}
-    no layout loaded
-{% endblock %}
+<div class="container">
 
+    {% block body %}
+        no layout loaded
+    {% endblock %}
+</div>
 
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </body>
 </html>
